# WebSockets

./: .gitignore  CMakeLists.txt
WebSocket/: CMakeLists.txt
WebSocket/WebSocket/: AddressInfo.hpp  SocketBase.hpp  TCPSocket.hpp  WebSocket.hpp  WebSocketContext.hpp  WebSocketPCH.hpp
WebSocket_Client/: CMakeLists.txt
WebSocket_Client/WebSocket_Client/: main.cpp
WebSocket_Server/: CMakeLists.txt
WebSocket_Server/WebSocket_Server/: main.cpp
